--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "chai-http": "^4.3.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.4"
