--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.1",
     "chai-http": "^4.3.0",
     "express": "^4.18.2",
+    "express-json-validator-middleware": "^3.0.1",
+    "jsonschema": "^1.4.1",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.4"
   }
