--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-json-validator-middleware": "^3.0.1",
     "jsonschema": "^1.4.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.4"
   }
