--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "chai-http": "^4.3.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "express-json-validator-middleware": "^3.0.1",
     "jsonschema": "^1.4.1",
