--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.4"
+  },
+  "devDependencies": {
+    "cypress": "^12.7.0"
   }
 }
